Bug 291213 - Ctrl+Enter doesn't open a selected link in a new tab.
Summary: Ctrl+Enter doesn't open a selected link in a new tab.
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.8.1
Platform: Debian unstable Linux
: NOR normal
Target Milestone: 0.9
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-10 21:04 UTC by Kete
Modified: 2012-01-27 15:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kete 2012-01-10 21:04:25 UTC
Version:           0.8.1 (using KDE 4.7.4) 
OS:                Linux

It is more convenient to press Tab and then Ctrl+Enter when I want to open the next link or two in a new tab. Ctrl has no affect on opening the link. Instead, the link opens in the current tab. It is less convenient to reach for the mouse and drag the pointer to the desired link to middle-click or Ctrl+click. I am simply requesting this convenience. Regards

Reproducible: Always

Steps to Reproduce:
Search for something on Scroogle.org, press tab a few times to select the first link, and press Ctrl+Enter.

Actual Results:  
The link will open in the same tab.

Expected Results:  
Rekonq should have opened the link in a new tab.
Comment 1 Andrea Diamantini 2012-01-17 10:22:03 UTC
I don't think this is a wish. CTRL + ENTER should really work as described here.
Comment 2 Andrea Diamantini 2012-01-27 15:46:37 UTC
Git commit 0eb6fc942efa069b36a60707fc870edcacf1c261 by Andrea Diamantini.
Committed on 27/01/2012 at 16:48.
Pushed by adjam into branch 'master'.

Open links in new tabs with CTRL + ENTER

M  +11   -1    src/webview.cpp

http://commits.kde.org/rekonq/0eb6fc942efa069b36a60707fc870edcacf1c261