Open links in new tabs with CTRL + ENTER

BUG:291213